extaernal link copy edits

--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -127,10 +127,12 @@
             
         }
       </style>
-  <div id="tpopup">
-    <%=  image_tag "Emblem-Bozzuto_Image_270x600_V2.jpg" %> 
-    <div id="tclose">X</div>    
-  </div>
+      <a href="http://www.emblembarracksrow.com/" target="blank" >
+        <div id="tpopup">
+          <%=  image_tag "Emblem-Bozzuto_Image_270x600_V2.jpg" %> 
+          <div id="tclose">X</div>    
+        </div>
+      </a>
 
     <div id="homeContent">
       <h1 class="sr-page-title"> You do the renting. We do the saving. </h1>
