official rule change

--- a/app/views/smartrent/pages/official_rules.html.erb
+++ b/app/views/smartrent/pages/official_rules.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <section class="content">
-  <p>1. SmartRent is Bozzuto’s program that gives you the opportunity to earn credit for the time you rent at <%= link_to "participating SmartRent apartments", find_apartments_path, :target => "_blank" %>. It offers a great opportunity to build up funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path, :target => "_blank" %>. SmartRent funds are credited to you at the time of Settlement and can be applied towards closing costs or to reduce your monthly payments. They do not replace the required earnest money deposit funds at time of contract or interim deposits due during the purchase process. Please consult the Community Sales Manager at the new Bozzuto Homes community of your choice for details.</p>
+  <p>1. SmartRent is Bozzuto’s program that gives you the opportunity to earn credit for the time you rent at <%= link_to "participating SmartRent apartments", find_apartments_path, :target => "_blank" %>. It offers a great opportunity to build up funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path, :target => "_blank" %>. SmartRent funds are credited to you at the time of settlement and can be applied towards closing costs. They do not replace the required earnest money deposit funds at time of contract or interim deposits due during the purchase process. Please consult the Community Sales Manager at the new Bozzuto Homes community of your choice for details.</p>
 
   <p>2. When you sign a lease at a participating SmartRent property, you will automatically be enrolled in the SmartRent program and will start earning SmartRent credits immediately. (If you don&#8217;t wish to participate, please notify the leasing consultant.)</p>
 
