--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -74,7 +74,7 @@
       </div>
       <div class="answer">
         <p>
-         A: After you activate your accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to "bozzutosmartrent.com", root_url %>. You will also receive a monthly SmartRent statement via e-mail.
+         A: After you activate your accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to "bozzutosmartrent.com", root_url %>. You will also receive a quarterly SmartRent statement via e-mail.
         </p>
       </div>
     </div>
@@ -108,7 +108,7 @@
       </div>
       <div class="answer">
         <p>
-         A: SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process.
+         A: SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process. However, your SmartRent credits may be used towards lease break or other incurred fees resulting from your lease agreement. Please note that SmartRent credits are not redeemable until you close on your new Bozzuto home.
         </p>
       </div>
     </div>
