total rewards an self.balance

--- a/app/views/smartrent/residents/statement.html.erb
+++ b/app/views/smartrent/residents/statement.html.erb
@@ -1,7 +1,7 @@
 <div class="member clearfix">
   <div class="memberStatementLeft">
     <div class="saveTitle">
-      <span class="lightBlue"><%= @resident.name %>,</span> You have <span class="lightBlue"><%= number_to_currency @resident.total_rewards, :precision => 0 %></span> Saved.
+      <span class="lightBlue"><%= @resident.name %>,</span> You have <span class="lightBlue"><%= number_to_currency @resident.balance, :precision => 0 %></span> Saved.
     </div>
 
     <div class="saveSubTitle">
@@ -55,7 +55,7 @@
     <h3>Total Earned</h3>
 
     <div class="v">
-      <%= number_to_currency @resident.total_rewards, :precision => 0 %>
+      <%= number_to_currency @resident.balance, :precision => 0 %>
     </div>
 
     <h3>Sign-Up Bonus</h3>
@@ -67,7 +67,7 @@
     <h3>Combined Total</h3>
 
     <div class="v total">
-      <%= number_to_currency @resident.total_rewards, :precision => 0 %>
+      <%= number_to_currency @resident.balance, :precision => 0 %>
     </div>
   </div>
 </div>
