Revert "disable google tag manager in staging"
This reverts commit 1db49219d6e50f8335f33e8930e78a147719e8ac.

--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -1,4 +1,4 @@
-<%#= render 'shared/google_tag_manager' %>
+<%= render 'shared/google_tag_manager' %>
 <header class="site-header">
   <div class="refresh-container">
     <nav class="site-header__main-nav">
